2005-03-24  Tom Tromey  <tromey@redhat.com>

	* bytecode/verify.cc (verify_fail): Take 'char*' argument.
	(get_type_val_for_signature): Don't use std::string.
	(verify_dimensions): Likewise.
	(state::merge): Likewise.
	(state::state_mergeable_p): Likewise.
	(push_type): Likewise.
	(compute_jump): Likewise.
	(note_branch_target): Likewise.
	(skip_padding): Likewise.
	(branch_prepass): Likewise.
	(check_pool_index): Likewise.
	(verify_instructions_0): Likewise.
	* verify.h (vfy_get_interface_count): Removed.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* bytecode/verify.cc (EITHER): New constant.
	(type::compatible): Handle EITHER.
	(type::equals): New method.
	(check_field_constant): Added 'putfield' argument.
	(verify_instructions_0): Update 'putfield' handling.
	* verify.h (vfy_fail): Fixed indentation.
	(vfy_class_has_field_p): New function.

2005-03-21  Tom Tromey  <tromey@redhat.com>

	* model/method.cc (create_abstract_instance): Create a
	model_abstract_method.
	* aot/aotclass.cc (find_in_vtable): Strip abstract methods.
	* model/invoke.cc (find_method): Create a model_abstract_method.
	* model/method.hh (class model_abstract_method): New class.

2005-03-12  Tom Tromey  <tromey@redhat.com>

	* model/constructor.cc (model_constructor): New constructor.
	(model_constructor): Correctly set this0.
	* model/constructor.hh (model_constructor): Declare.
	* bytecode/generate.cc (visit_new): Use accessor constructor if
	needed.
	(visit_type_qualified_invocation): Handle accessor.
	(visit_super_invocation): Likewise.
	* model/invoke.cc (handle_resolve): Add extra arguments when
	calling constructor accessor.
	(resolve): Handle class in static context.
	* model/method.hh (model_method::get_parameter_count): New
	method.
	* model/class.cc (get_accessor): Create accessor constructor.

2005-03-03  Tom Tromey  <tromey@redhat.com>

	* aot/aotclass.cc (add_item): Ignore index 0.

2005-03-03  Tom Tromey  <tromey@redhat.com>
